<resources>
    <string name="app_name">BookMoth</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Mật khẩu</string>
    <string name="invalid_username">Email không hợp lệ</string>
    <string name="invalid_password">Mật khẩu không hợp lệ</string>
    <string name="login_failed">"Login failed"</string>
    <string name="login_with_google">Đăng nhập bằng Google</string>
    <string name="no_internet">Không có kết nối internet!</string>
    <string name="LoginFailedMessage">Đăng nhập thất bại. Thử lại sau!</string>
    <string name="error_signin_cancelled">Quá trình đăng nhập không thể hoàn thành!</string>
    <string name="error_network">Lỗi kết nối Internet!</string>
    <string name="error_invalid_account">Tài khoản không hợp lệ!</string>
    <string name="error_unknown">Lỗi không xác định!</string>
    <string name="firebase_auth_failed">Đăng nhập thất bại!</string>
    <string name="api_not_connected">API not connected</string>
    <string name="what_your_name">Bạn tên gì?</string>
    <string name="return_button">➜</string>
    <string name="type_your_name">Nhập tên của bạn trong đời thực.</string>
    <string name="LastName">Họ</string>
    <string name="firstname_for_register">Tên</string>
    <string name="i_have_a_account">Tôi có tài khoản rồi</string>
    <string name="next">Tiếp theo</string>
    <string name="what_your_birth">Sinh nhật của bạn?</string>
    <string name="type_your_birth">Thông tin này là bí mật!</string>
    <string name="female">Nữ</string>
    <string name="male">Nam</string>
    <string name="other">Lựa chọn khác</string>
    <string name="what_your_gender">Giới tính của bạn?</string>
    <string name="warning_name">Vui lòng nhập thông tin hợp lệ</string>
    <string name="warning_gender">Vui lòng chọn thông tin!</string>
    <string name="Invalid_date_of_birth">Người dùng cần trên 12 tuổi!</string>
    <string name="setDate">Chọn ngày</string>
    <string name="forgot_password">Quên mật khẩu?</string>
    <string name="loginWithEmail">Đăng nhập</string>
    <string name="register">Đăng ký ngay</string>
    <string name="what_your_email">Nhập email của bạn.</string>
    <string name="type_your_email">Email này sẽ được dùng để đăng ký tài khoản.</string>
    <string name="email_not_empty">Email không được để trống</string>
    <string name="what_your_otp">Nhập mã OTP</string>
    <string name="type_your_otp">Nhập mã OTP được gửi đến email. Mã có hiệu lực trong vòng 5 phút</string>
    <string name="confirm_password">Nhập lại mật khẩu</string>
    <string name="what_your_password">Đặt mật khẩu</string>
    <string name="type_your_password">Mật khẩu sẽ được dùng để đăng nhập</string>
    <string name="string_password_required">Không được để trống</string>
    <string name="string_password_not_match">Mật khẩu không khớp</string>
    <string name="invalid_patten_pass">Mật khẩu ít nhất 8 ký tự, bao gồm chữ hoa, chữ thường, số và ký tự đặc biệt</string>
    <string name="welcom_to_bookmoth">ơi, chào mừng bạn đến với BookMoth!</string>
    <string name="personal_optimize">Hãy bắt đầu tùy chỉnh trải nghiệm của bạn nhé</string>
    <string name="gender_male">Nam</string>
    <string name="gender_female">Nữ</string>
    <string name="gender_other">Khác</string>
    <string name="undefined_error">"Lỗi không xác định - "</string>
    <string name="error_connecting_to_server">Máy chủ chưa thể phản hồi!</string>
    <string name="account_does_not_exist">Tài khoản không tồn tại</string>
    <string name="incorrect_email_or_password">Sai email hoặc mật khẩu</string>
    <string name="email_already_exists">Email đã tồn tại</string>
    <string name="invalid_email">Email không hợp lệ</string>
    <string name="cannot_send_otp">Không thể gửi mã OTP. Thử lại sau!</string>
    <string name="loading">Vui lòng đợi...</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="otp_will_expire_after">"Mã OTP sẽ hết hạn sau "</string>
    <string name="resend_otp_after">"Gửi lại sau "</string>
    <string name="invalid_otp">Mã OTP không đúng hoặc hết hạn</string>
    <string name="resend_otp_now">Gửi lại</string>
    <string name="isEmptyOtp">Vui lòng nhập OTP</string>
    <string name="cannot_register">Tạo tài khoản không thành công, thử lại sau!</string>
    <string name="invalid_google_account">Tài khoản Google không hợp lệ</string>
    <string name="register_now">Đăng ký tài khoản</string>
    <string name="what_your_option">Bạn muốn đăng ký bằng tài khoản nào</string>
    <string name="register_with_email">Đăng ký bằng email</string>
    <string name="register_with_google">Đăng ký bằng Google</string>
    <string name="continue_after">"Tiếp tục sau "</string>
    <string name="choose_your_avatar">Chọn ảnh đại diện</string>
    <string name="skip">Bỏ qua</string>
    <string name="your_session_has_expired">Phiên đăng nhập đã hết hạn. Vui lòng đăng nhập lại!</string>
    <string name="connection_restored">Đã khôi phục kết nối</string>
    <string name="follower">người theo dõi</string>
    <string name="error_get_post">"Lỗi lấy bài viết: "</string>
    <string name="payment_account">Tài khoản thanh toán</string>
    <string name="deposit">Nạp tiền</string>
    <string name="transfer">Chuyển tiền</string>
    <string name="withdraw">Rút tiền</string>
    <string name="receive_money">Nhận tiền</string>
    <string name="history">Lịch sử</string>
    <string name="bill">Hóa đơn</string>
    <string name="movie_ticket">Vé xem phim</string>
    <string name="train_tiket">Vé tàu</string>
    <string name="suggestions_for_you">Gợi ý cho bạn</string>
    <string name="deposit_into_bookmoth_account">Nạp tiền vào tài khoản BookMoth</string>
    <string name="zalopay">ZaloPay</string>
    <string name="vietinbank">Vietinbank</string>
    <string name="confirm">Xác nhận</string>
    <string name="add_link">Thêm liên kết</string>
    <string name="please_input_amount">Vui lòng nhập số tiền</string>
    <string name="mininum_requirement_10000">Yêu cầu tối thiểu 10,000đ</string>
    <string name="welcom_to_bookmoth_wallet">"ơi, chào mừng đến với ví điện tử BookMoth"</string>
    <string name="create_your_pin">Tạo mã PIN của bạn để bắt đầu</string>
    <string name="invalid_data">Dữ liệu không hợp lệ</string>
    <string name="wallet_already_exists">Ví đã tồn tại!</string>
    <string name="cannot_process_request">Không thể xử lý yêu cầu</string>
    <string name="create_wallet_successfully">Tạo ví thành công</string>
    <string name="wallet_does_not_exist">Lỗi ví</string>
    <string name="close">Đóng</string>
    <string name="transaction_successfully">Giao dịch thành công</string>
    <string name="transaction_id">Mã giao dịch:</string>
    <string name="transaction_result">Kết quả giao dịch</string>
    <string name="transaction_failed">Giao dịch thất bại</string>
    <string name="transaction_canceled">Đã hủy giao dịch</string>
    <string name="transaction_fee">Phí giao dịch:</string>
    <string name="free">Miễn phí</string>
    <string name="error_register_cancelled">Đã hủy đăng ký</string>
    <string name="message">Nhắn tin</string>
    <string name="follow">Theo dõi</string>
    <string name="following">Đang theo dõi</string>
    <string name="avatar">Ảnh đại diện</string>
    <string name="edit_avatar">Chỉnh sửa</string>
    <string name="cover">Ảnh bìa</string>
    <string name="username">Username</string>
    <string name="fullname">Họ tên</string>
    <string name="Fullname">Họ tên</string>
    <string name="birth">Sinh nhật</string>
    <string name="gender">Giới tính</string>
    <string name="try_again">Lỗi, thử lại sau</string>
    <string name="error_auth">Lỗi xác minh</string>
    <string name="error_account">Lỗi tài khoản</string>
    <string name="do_you_want_to_save_change">Bạn có muốn lưu thay đổi?</string>
    <string name="incorrect_pin">Mã PIN không chính xác</string>
    <string name="please_login_again">Lỗi tài khoản, vui lòng đăng nhập lại!</string>
    <string name="invalid_transaction">Giao dịch không hợp lệ</string>
    <string name="wallet">Ví BookMoth</string>
    <string name="transaction_error">Đã xảy ra lỗi khi giao dịch</string>
    <string name="please_create_wallet">Vui lòng mở ví để thực hiện giao dịch</string>
    <string name="invalid_receiver">Người nhận không đúng</string>
    <string name="insufficient_funds">Không đủ số dư. Vui lòng nạp thêm tiền.</string>
    <string name="has_owned">Bạn đã sở hữu rồi</string>
    <string name="mutual_friend">bạn chung</string>
    <string name="not_found_profile">Không tìm thấy người dùng nào</string>
    <string name="no_post">Chưa có bài viết nào</string>
    <string name="please_enter_full_information">Vui lòng nhập đủ thông tin</string>
    <string name="post">Bài viết</string>
    <string name="photo">Ảnh</string>
    <string name="friend">Bạn bè</string>
    <string name="video">Video</string>
    <string name="profile_desc">Profile Image</string>
    <string name="search_hint">Bạn muốn đọc gì ?</string>
    <string name="tab_description">Tab menu</string>
    <string name="menu">Menu</string>
    <string name="your_wallet">Ví của bạn</string>
    <string name="logout">Đăng xuất</string>
    <string name="your_book">Sách của bạn</string>
    <string name="your_library">Thư viện của bạn</string>
    <string name="your_work">Tác phẩm của bạn</string>
    <string name="more">Xem thêm</string>
    <string name="help">Trung tâm hỗ trợ</string>
    <string name="setting">Cài đặt</string>
    <string name="choose_catagory">Chọn thể loại</string>
    <string name="general_submit">Xác nhận</string>
    <string name="general_cancel">Huỷ bỏ</string>
    <string name="general_areyousure">Bạn chắc chắn với hành động này chứ?</string>
    <string name="general_price">Điểm giá</string>
    <string name="mainnav_thuvien">Thư viện</string>
    <string name="libmode_toAuthor">Viết tác phẩm</string>
    <string name="libmode_toReader">Đọc tác phẩm</string>
    <string name="libmode_title_author">TRANG TÁC GIẢ</string>
    <string name="libmode_title_reader">THƯ VIỆN ĐỌC</string>
    <string name="liblabel_work_detail">Tác phẩm</string>
    <string name="chapter_chapter">Chương </string>
    <string name="contentselection_discuss">Trích dẫn</string>
    <string name="contentselection_search">Tìm kiếm</string>
    <string name="contentselection_report">Báo cáo</string>
    <string name="reader_nextchapter_none">Hiện không có chương tiếp theo</string>
    <string name="reader_nextchapter_done">Đang xem chương </string>
    <string name="reader_prevchapter_none">Đã đến chương đầu tiên</string>
    <string name="reader_prevchapter_done">Đang quay lại chương </string>
    <string name="reader_loadchaper">Đang tải chương</string>
    <string name="color_white">Trắng</string>
    <string name="color_black">Đen</string>
    <string name="color_ink">Xanh mực</string>
    <string name="color_light">Sáng</string>
    <string name="color_amoled">AMOLED</string>
    <string name="color_paper">Giấy vàng</string>
    <string name="button_addchapter_label">Chương mới</string>
    <string name="button_addwork_label">Tác phẩm mới</string>
    <string name="button_deletework_label">Xoá tác phẩm</string>
    <string name="button_editwork_label">Sửa thông tin</string>
    <string name="addwork_ui_title">Thêm tác phẩm mới</string>
    <string name="work_input_title">Tiêu đề của tác phẩm *</string>
    <string name="work_input_title_error_blank">Tiêu đề không để trống</string>
    <string name="work_input_pricing">Số điểm dùng đọc *</string>
    <string name="work_input_pricing_warning_defaultprice">Để trống sẽ đặt số điểm là 0</string>
    <string name="work_input_description">Mô tả tác phẩm</string>
    <string name="work_button_addcover">Thêm ảnh bìa</string>
</resources>