<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.activity.register.TypeNameActivity">

    <TextView
        android:id="@+id/what_your_name"
        android:layout_width="142dp"
        android:layout_height="39dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="20dp"
        android:text="@string/what_your_name"
        android:textColor="?attr/colorOnBackground"
        android:textSize="22sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/return_button" />

    <Button
        android:id="@+id/return_button"
        android:layout_width="50dp"
        android:layout_height="54dp"
        android:layout_margin="0dp"
        android:layout_marginStart="36dp"
        android:layout_marginTop="16dp"
        android:background="@android:color/transparent"
        android:padding="0dp"
        android:rotationY="180"
        android:text="@string/return_button"
        android:textColor="?attr/colorOnBackground"
        android:textSize="29sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <!-- Dùng LinearLayout để chứa hai EditText -->
    <TextView
        android:id="@+id/type_your_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="1dp"
        android:text="@string/type_your_name"
        android:textColor="?attr/colorOnBackground"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/what_your_name" />

    <LinearLayout
        android:id="@+id/name_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/type_your_name">

        <LinearLayout
            android:id="@+id/sub_name_container"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="36dp"
            android:gravity="center"
            android:orientation="horizontal">

            <!-- Họ -->
            <com.google.android.material.textfield.TextInputLayout
                style="@style/TextInputOutlinedStyle"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_marginStart="15dp"
                android:layout_marginEnd="8dp"
                android:hint="@string/LastName">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/last_name_for_register"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:inputType="text"/>
            </com.google.android.material.textfield.TextInputLayout>

            <!-- Tên -->
            <com.google.android.material.textfield.TextInputLayout
                style="@style/TextInputOutlinedStyle"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="15dp"
                android:hint="@string/firstname_for_register">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/firstname_for_register"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:inputType="text"/>
            </com.google.android.material.textfield.TextInputLayout>

        </LinearLayout>

        <TextView
            android:id="@+id/warning_full_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="15dp"
            android:text="@string/warning_name"
            android:textColor="@android:color/holo_red_dark"
            android:textSize="14sp"
            android:visibility="gone" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:id="@+id/next_for_register"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="15dp"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="15dp"
                android:backgroundTint="#346FA9"
                android:text="@string/next"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/sub_name_container" />

        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toBottomOf="parent">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:padding="10dp">

            <Button
                android:id="@+id/i_have_a_account"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@android:color/transparent"
                android:text="@string/i_have_a_account"
                android:textColor="?attr/colorOnBackground" />
        </LinearLayout>
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>